Other remaining file including sample controller