@@ -2,13 +2,60 @@ group 'com.hackathon'
 version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
+apply plugin: 'war'
+apply plugin: 'idea'
+apply plugin: 'org.akhikhl.gretty'
 
-sourceCompatibility = 1.5
+sourceCompatibility = 1.7
+targetCompatibility = 1.7
 
 repositories {
+    mavenLocal()
     mavenCentral()
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.11'
+    compile "ch.qos.logback:logback-classic:$logBackVersion"
+    compile "org.springframework:spring-webmvc:$springMVCVersion"
+    compile "org.apache.commons:commons-lang3:$commonsLangVersion"
+    compile "org.thymeleaf:thymeleaf-spring4:$thymeleafVersion"
+//    compile 'javax.servlet:jstl:1.2'
+    compile "mysql:mysql-connector-java:$mysqlConnectorJava"
+    compile "org.springframework.boot:spring-boot-starter-data-jpa:$JPAVersion"
+    compile "org.hibernate:hibernate-core:$hibernateCore"
+    compile "commons-dbcp:commons-dbcp:$commonDBCP"
+    compile "org.hibernate:hibernate-validator:$hibernateValidatorVersion"
+    compile "com.googlecode.json-simple:json-simple:$googleJsonSimple"
+//    compile group: 'org.springframework.security', name: 'spring-security-web', version: '4.2.1.RELEASE'
+//    compile group: 'org.springframework.security', name: 'spring-security-config', version: '4.2.1.RELEASE'
+//    compile group: 'org.springframework.security', name: 'spring-security-core', version: '4.2.1.RELEASE'
+
+    //include in compile only, exclude in the war
+    providedCompile "javax.servlet:javax.servlet-api:$servletApiVersion"
+}
+
+buildscript {
+    repositories {
+        jcenter()
+    }
+
+    dependencies {
+        //Gretty Embedded Jetty
+        classpath 'org.akhikhl.gretty:gretty:+'
+    }
+}
+
+gretty {
+    jvmArgs = [
+            '-XX:MaxPermSize=256m',
+            '-Xms512m',
+            '-Xmx1024m']
+    port = 8075
+    scanInterval = 1
+    fastReload = true
+    recompileOnSourceChange = true
+    reloadOnClassChange = true
+    reloadOnLibChange = true
+    contextPath = '/'
+    servletContainer = 'jetty9' //tomcat7 or tomcat8
 }
